--- a/leetcode.vcxproj.filters
+++ b/leetcode.vcxproj.filters
@@ -1,58 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="头文件">
+    <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="资源文件">
+    <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
-    <Filter Include="源文件\array">
-      <UniqueIdentifier>{66b93b7c-2a66-42ff-9e92-8ce4d7629ef9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\linked-list">
-      <UniqueIdentifier>{36cb116d-2131-4fa0-9164-2e5777cf5fd3}</UniqueIdentifier>
+    <Filter Include="Source Files\greedy">
+      <UniqueIdentifier>{2d61b7f6-8cd4-4089-a00c-21c5e1d43362}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="leetcode.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="29.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="37.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="38.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="39.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="88.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="104.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="206.c">
-      <Filter>源文件\linked-list</Filter>
-    </ClCompile>
-    <ClCompile Include="237.c">
-      <Filter>源文件\linked-list</Filter>
-    </ClCompile>
-    <ClCompile Include="92.c">
-      <Filter>源文件\linked-list</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="136.c">
-      <Filter>源文件\array</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="237.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="greedy\11.c">
+      <Filter>Source Files\greedy</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
