--- a/leetcode.vcxproj.filters
+++ b/leetcode.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\144.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -86,7 +83,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.h">
+    <ClInclude Include="leetcode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
